# u-wright-stl-3dprintready220x220-optimization-engine

./: MANIFEST.in  README.md  cli.py  pyproject.toml
orienter/: __init__.py  cli.py
orienter/data/: example_config.json  weight_presets.json
orienter/tests/: test_health.py  test_service.py
orienter/ui/: app.py  config.py  db.py  schemas.py  service.py
orienter/ui/static/: styles.css
orienter/ui/templates/: base.html  dashboard.html  new_run.html  run_detail.html  runs.html  settings.html
repo/: .gitignore  README.md
repo/backend/: requirements.txt
repo/backend/app/: db.py  main.py  models.py  settings.py  storage.py
repo/backend/app/api/: candidates.py  downloads.py  events.py  runs.py
repo/backend/app/gcode/: metrics_stage2.py  parse_gcode.py  preview_cache.py
repo/backend/app/geometry/: candidates.py  mesh_load.py  metrics_stage1.py
repo/backend/app/jobs/: runner.py  scoring.py  stage1_geometry.py  stage2_slice.py
repo/backend/app/slicer/: prusa_cli.py
repo/backend/tests/: test_gcode_metrics.py
repo/frontend/: app.js  index.html  styles.css
repo/scripts/: install_prusa.md  run_dev_backend.sh  run_dev_frontend.sh
ui/: __init__.py
