[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orienter"
version = "0.1.0"
description = "Local operator UI for Creality 220 STL orientation optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic"
]

[project.scripts]
orienter = "orienter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orienter*"]

[tool.pytest.ini_options]
testpaths = ["orienter/tests"]
